force-app/scenario 1 - formula field/objects/Opportunity/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Formula field to Account</description>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Account&#39;s Account Number</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>