force-app/scenario 1 - formula field/objects/Opportunity/fields/Good_Payer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Good_Payer_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>A calculated value based on the account&#39;s payor history field. Updated via Flow.</description>
    <inlineHelpText>A discount that can be applied due to the Account payment history.</inlineHelpText>
    <label>Good Payer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>