force-app/scenario 1 - formula field/objects/Opportunity/fields/Parent_Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated via Apex trigger from the Parent API</description>
    <inlineHelpText>The discount to be applied based on relationship or agreement with the Account&#39;s Parent Account.</inlineHelpText>
    <label>Parent Account Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>